# cv_analyzer

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yaml  init-letsencrypt.sh  plan.md  run.sh
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  app.py  cv_analyzer.db.bak  database.py  main.py  pyproject.toml
backend/api/: dependencies.py
backend/api/routes/: __init__.py  jobs.py  resume.py  runs.py
backend/configs/: __init__.py  settings.py
backend/models/: __init__.py  base.py  job.py  job_result.py  resume.py  run.py
backend/prompts/: analyze_job.md  ask_run.md  cover_letter.md  parse_cv.md
backend/schemas/: __init__.py  jobs.py  resume.py  runs.py
backend/services/: __init__.py  analysis.py  document_parser.py  llm_service.py
frontend/: Dockerfile  default.conf.template  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  main.tsx  router.tsx
frontend/src/api/: client.ts  keys.ts  types.ts
frontend/src/components/: Button.tsx  Layout.tsx  Markdown.tsx  RunList.tsx  Skeleton.tsx  VerdictBadge.tsx
frontend/src/lib/: runHistory.ts  useDocumentTitle.ts  verdicts.ts
frontend/src/pages/: AnalyzePage.tsx  HistoryPage.tsx  NotFoundPage.tsx  RunPage.tsx
